added model tests

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,3 +1,4 @@
 <%= javascript_include_tag 'comments' %>
 <h1>Test Item List</h1>
 <div id="app">Insert Here</div>
+<div id="list">Insert Here</div>
