--- a/app/views/datapoints/index.html.erb
+++ b/app/views/datapoints/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'common-bundle' %>
 <%= javascript_include_tag 'main' %>
 <h1>React Example</h1>
 <div class="row col-md-12">
