added ajax functionlity

--- a/app/views/datapoints/index.html.erb
+++ b/app/views/datapoints/index.html.erb
@@ -26,7 +26,7 @@
             <!-- Input Component -->
           </span>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" id="datasubmit" class="btn btn-primary">Submit</button>
       </form>
     </div>
   </div> <!--End Form Panel -->
@@ -44,11 +44,10 @@
           <th>Amount</th>
         </thead>
         <tbody>
-          <tr>
-            <td>Append Category here</td>
-            <td>Append Type Here</td>
-            <td>Append Amount Here</td>
-          </tr>
+          <span id="data"></span>
+            <tr>
+              <!-- Data Component -->
+            </tr>
         </tbody>
       </table>
     </div>
