--- a/app/views/datapoints/index.html.erb
+++ b/app/views/datapoints/index.html.erb
@@ -2,56 +2,5 @@
 <%= javascript_include_tag 'main' %>
 <h1>React Example</h1>
 <div class="row col-md-12">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h2>Data Input</h2>
-    </div>
-    <div class="panel-body">
-      <form>
-        <div class="form-group">
-          <label>Category</label>
-          <span id="category">
-            <!--Category Component -->
-          </span>
-        </div>
-        <div class="form-group">
-          <label>Type</label>
-          <span id="type">
-            <!--Type Component -->
-          </span>
-        </div>
-        <div class="form-group" id="input">
-          <label for="Amount">Amount</label>
-          <span id="inputdata">
-            <!-- Input Component -->
-          </span>
-        </div>
-        <button type="submit" id="datasubmit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-  </div> <!--End Form Panel -->
-</div> <!-- End Row -->
-<div class="row col-md-12">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h2>Data Table</h2>
-    </div>
-    <div class="panel-body">
-      <table class="table table-striped">
-        <thead>
-          <th>Category</th>
-          <th>Type</th>
-          <th>Amount</th>
-        </thead>
-        <tbody>
-          <span id="data"></span>
-            <tr>
-              <!-- Data Component -->
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div> <!--End Form Panel -->
-</div> <!-- End Row -->
-
-<div id="example" />
+  <div id="dataForm"> </div>
+</div>
