completed simple form

--- a/app/views/datapoints/index.html.erb
+++ b/app/views/datapoints/index.html.erb
@@ -1,3 +1,6 @@
 <%= javascript_include_tag 'common-bundle' %>
 <%= javascript_include_tag 'main' %>
+<div id="dataform"></div>
 <div id="datapoints"></div>
+Status API Training Shop Blog About
+© 2016 GitHub, Inc. Terms Privacy Security Contact Help
